alignment fix avatar

--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -69,11 +69,5 @@
   height: 100px;
   width: 100px;
   max-width: 100%;
+  box-shadow: 1px 1px 3px rgba(56, 56, 56, 0.39);
 }
-//
-// @media (min-width: $tablet) {
-//   .avatar {
-//     height: 100px;
-//     width: 100px;
-//   }
-// }
